--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,19 @@ jobs:
       with:
         flutter-version: '3.24.0'
         channel: 'stable'
+    
+    - name: Create icon directories
+      run: |
+        mkdir -p android/app/src/main/res/mipmap-mdpi
+        mkdir -p android/app/src/main/res/mipmap-hdpi
+        mkdir -p android/app/src/main/res/mipmap-xhdpi
+        mkdir -p android/app/src/main/res/mipmap-xxhdpi
+        mkdir -p android/app/src/main/res/mipmap-xxxhdpi
+    
+    - name: Create launcher icons
+      run: |
+        chmod +x create_icons.sh
+        ./create_icons.sh
         
     - name: Get dependencies
       run: flutter pub get
