--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
+  permission_handler: ^11.0.1
+  shared_preferences: ^2.2.2
+  telephony: ^0.2.0
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
